the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2019-08-13] RBC: added member fifo_skip and a mechanism to skip FIFO-ordering
* [2019-08-12] RBC: added member ID_log to trace the history of ID operations
* [2019-08-12] RFC4880: improved MessageParse() for detecting invalid structure
* [2019-08-11] RFC4880: added Intended Recipient Fingerprint subpacket
               cf. https://gitlab.com/openpgp-wg/rfc4880bis/merge_requests/19
* [2019-08-11] RFC4880: improved TMCG_OpenPGP_Signature::operator < according
               to suggested canonical ordering, cf. https://dev.gnupg.org/T3389
* [2019-08-09] aiounicast_select: added chunked encryption mode for robustness
* [2019-08-08] aiounicast: added member aio_is_chunked
* [2019-08-05] aiounicast_*: fixes missing MAC reset even if verification fails
* [2019-07-14] RBC: added recoverID() to recover an old state of the channel
* [2019-07-14] RBC: added QueueFrom() to queue an already delivered message
* [2019-07-13] RBC: fixed a logical error w.r.t. so-called bad r-answer messages
* [2019-07-11] RFC4880: added member 'expired' to TMCG_OpenPGP_Signature, 
               TMCG_OpenPGP_Subkey, and TMCG_OpenPGP_Pubkey
* [2019-07-10] RFC4880: changed length encoding for strings and subpackets
* [2019-07-08] RFC4880: changed ArmorEncode() to avoid armor header by default
   see https://mailarchive.ietf.org/arch/msg/openpgp/WynQyL-9vfVFLe2Jau3jxpT83g8
* [2019-06-13] RFC4880: changed TMCG_OpenPGP_Pubkey::CheckSelfSignatures() in
               order to handle keys without user IDs (cf. RFC4880bis)
* [2019-06-10] mpz_sprime: improved trial division by using GCD implementation