@@ -78,21 +78,23 @@ CachinKursawePetzoldShoupRBC::CachinKursawePetzoldShoupRBC
 	aiou = aiou_in;
 
 	// initialize ID and log
-	mpz_init_set_ui(ID, 0L);
+	mpz_init_set_ui(ID, 0UL);
 	ID_log["0"] = "entry generated by constructor";
 
 	// initialize whoami (this variable is called $j$ in the paper)
 	mpz_init_set_ui(whoami, j);
 
 	// initialize sequence counter
-	mpz_init_set_ui(s, 0L);
+	mpz_init_set_ui(s, 0UL);
 
 	// initialize message action types
-	mpz_init_set_ui(r_send, 1L);
-	mpz_init_set_ui(r_echo, 2L);
-	mpz_init_set_ui(r_ready, 3L);
-	mpz_init_set_ui(r_request, 4L);
-	mpz_init_set_ui(r_answer, 5L);
+	mpz_init_set_ui(r_send, 1UL);
+	mpz_init_set_ui(r_echo, 2UL);
+	mpz_init_set_ui(r_ready, 3UL);
+	mpz_init_set_ui(r_request, 4UL);
+	mpz_init_set_ui(r_answer, 5UL);
+	mpz_init_set_ui(l_retrieve, 6UL);
+	mpz_init_set_ui(l_deliver, 7UL);
 
 	// initialize message counters
 	send.resize(n);
@@ -100,6 +102,7 @@ CachinKursawePetzoldShoupRBC::CachinKursawePetzoldShoupRBC
 	ready.resize(n);
 	request.resize(n);
 	answer.resize(n);
+	retrieve.resize(n);
 
 	// initialize message and deliver buffers
 	buf_mpz.resize(n);
@@ -109,7 +112,7 @@ CachinKursawePetzoldShoupRBC::CachinKursawePetzoldShoupRBC
 	{
 		deliver_error.push_back(false);
 		mpz_ptr tmp = new mpz_t();
-		mpz_init_set_ui(tmp, 1L); // initialize sequence counter by 1
+		mpz_init_set_ui(tmp, 1UL); // initialize sequence counter by 1
 		deliver_s.push_back(tmp);
 	}
 }
@@ -336,6 +339,20 @@ void CachinKursawePetzoldShoupRBC::TagMessage
 	mpz_clear(tag_val);
 }
 
+void CachinKursawePetzoldShoupRBC::TagMessage
+	(std::string &tag, const RBC_ConstMessage &message)
+{
+	if (message.size() != 5)
+		throw std::invalid_argument("RBC::TagMessage(): bad message");
+	mpz_t tag_val;
+	mpz_init(tag_val);
+	tmcg_mpz_shash(tag_val, 3, message[0], message[1], message[2]);
+	std::stringstream tag_ss;
+	tag_ss << tag_val;
+	tag = tag_ss.str();
+	mpz_clear(tag_val);
+}
+
 void CachinKursawePetzoldShoupRBC::ReleaseMessage
 	(RBC_Message &message)
 {
@@ -432,22 +449,25 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 	InitializeMessage(message);
 	// process messages according to the RBC protocol [CKPS01]
 	// extended with a simple FIFO-order delivery mechanism
+	// and a corresponding out-of-order handler
 	time_t entry_time = time(NULL);
 	do
 	{
 		// first, process the deliver buffer
 		std::list<RBC_VectorList::iterator> cleanup;
+		RBC_VectorList::iterator retrieve_it;
 		mpz_t max_s[n], min_s[n];
 		for (size_t i = 0; i < n; i++)
 		{
 			mpz_init_set_ui(max_s[i], 0UL);
 			mpz_init_set_ui(min_s[i], 0UL);
 		}
+		retrieve_it = deliver_buf.end();
 		for (RBC_VectorList::iterator lit = deliver_buf.begin();
 			lit != deliver_buf.end(); ++lit)
 		{
 			if (mpz_cmp((*lit)[0], ID))
-				continue; // ID does not match
+				continue; // ID does not match; ignore for now
 			size_t who = mpz_get_ui((*lit)[1]);
 			// check for matching deliver sequence counter
 			if (!mpz_cmp((*lit)[2], deliver_s[who]))
@@ -459,7 +479,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 					throw std::runtime_error("RBC::Deliver(): mbar not found");
 				// increase deliver sequence counter
 				mpz_add_ui(deliver_s[who], deliver_s[who], 1UL);
-				// get payload from mbar cache
+				// get the payload from mbar cache
 				mpz_set(m, mbar[tag]);
 				i_out = who;
 				// cleanup
@@ -489,22 +509,23 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 					(mpz_cmp(min_s[who], (*lit)[2]) > 0))
 				{
 					mpz_set(min_s[who], (*lit)[2]);
+					retrieve_it = lit; // take the minimal missing message
 				}
 			}
 			// check for lower deliver sequence counter
 			if (mpz_cmp((*lit)[2], deliver_s[who]) < 0)
 			{
-				std::cerr << "RBC(" << j << "): remove message from " <<
-					who << " with s = " << (*lit)[2] << " (vs." <<
-					" deliver_s = " << deliver_s[who] << ")" << std::endl;
+				std::cerr << "RBC(" << j << "): remove obsolete message" <<
+					" from " << who << " with s = " << (*lit)[2] << " (vs" <<
+					" deliver_s = " <<	deliver_s[who] << ")" << std::endl;
 				cleanup.push_back(lit);
 			}
 		}
-		// skip FIFO ordering, if (max_s-min_s) > fifo_skip for some party
-		for (size_t i = 0; i < n; i++)
+		// skip FIFO ordering, if (max_s[i]-min_s[i]) > fifo_skip for some i
+		for (size_t i = 0; (i < n) && (fifo_skip > 0); i++)
 		{
 			mpz_sub(foo, max_s[i], min_s[i]);
-			if ((mpz_cmp_ui(foo, fifo_skip) > 0) && (fifo_skip > 0))
+			if ((mpz_cmp_ui(foo, fifo_skip) > 0))
 			{
 				std::cerr << "RBC(" << j << "): adjust deliver sequence" <<
 					" counter from " << deliver_s[i] << " to " <<
@@ -513,12 +534,47 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				mpz_set(deliver_s[i], min_s[i]);
 			}
 		}
+		// out-of-order handler: send l-retrieve message to all other parties
+		if ((retrieve_it != deliver_buf.end()) && (fifo_skip == 0))
+		{
+			RBC_ConstMessage message2;
+			size_t who = mpz_get_ui((*retrieve_it)[1]);
+			message2.push_back((*retrieve_it)[0]);
+			message2.push_back((*retrieve_it)[1]);
+			message2.push_back(deliver_s[who]);
+			message2.push_back(l_retrieve);
+			message2.push_back(l_retrieve);
+			bool sent = false;
+			std::string tag;
+			TagMessage(tag, message2);
+			for (size_t i = 0; ((i < n) && !retrieve[j].count(tag)); i++)
+			{
+				if (i == j)
+					continue; // skip myself
+				if (retrieve[i].count(tag) > 0)
+					continue; // skip, if already retrieved
+				if (!aiou->Send(message2, i, aio_timeout_vs))
+				{
+					std::cerr << "RBC(" << j << "): sending l-retrieve" <<
+						" failed for " << i << std::endl;
+				}
+				sent = true;
+			}
+			message2.clear();
+			if (sent)
+			{
+				retrieve[j].insert(std::pair<std::string, bool>(tag, true));
+				std::cerr << "RBC(" << j << "): l-retrieve sent for message" <<
+					" of party " << who << " (" << min_s[who] << " vs " <<
+					deliver_s[who] << ")" << std::endl;
+			}
+		}
 		for (size_t i = 0; i < n; i++)
 		{
 			mpz_clear(max_s[i]);
 			mpz_clear(min_s[i]);
 		}
-		// remove old messages w.r.t. deliver sequence counter
+		// remove obsolete messages w.r.t. deliver sequence counter
 		while (cleanup.size() > 0)
 		{
 			RBC_VectorList::iterator lit = cleanup.front();
@@ -526,7 +582,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 			deliver_buf.erase(lit);
 			cleanup.pop_front();
 		}
-		// second, anything buffered from previous calls/rounds?
+		// second, process anything buffered from previous calls/rounds
 		size_t l = n;
 		std::vector<size_t> pi;
 		for (size_t i = 0; i < n; i++)
@@ -554,7 +610,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				break;
 			}
 		}
-		// third, receive message, if nothing else is buffered
+		// third, receive a new message, if nothing else is buffered
 		if (l == n)
 		{
 			// receive a message from an arbitrary party $P_l$
@@ -579,7 +635,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 			continue;
 		}
 		if ((mpz_cmp(message[3], r_send) < 0) ||
-			(mpz_cmp(message[3], r_answer) > 0))
+			(mpz_cmp(message[3], l_deliver) > 0))
 		{
 			std::cerr << "RBC(" << j << "): wrong action in tag from " << l <<
 				std::endl;
@@ -589,44 +645,43 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 		if (!mpz_cmp(message[3], r_send) && !send[l].count(tag))
 		{
 			send[l].insert(std::pair<std::string, bool>(tag, true));
+			// if $(j = l)$ and $\bar{m} = \bot$ then
 			if (mpz_cmp_ui(message[1], l))
 			{
 				std::cerr << "RBC(" << j << "): received faked r-send" <<
 					" message of " << message[1] << " from " << l << std::endl;
+				continue;
 			}
-			else
+			if (mbar.count(tag) == 0)
 			{
-				if (mbar.count(tag) == 0)
-				{
-					mpz_ptr tmp = new mpz_t();
-					mpz_init_set(tmp, message[4]); // $\bar{m} \gets m$
-					mbar.insert(std::pair<std::string, mpz_ptr>(tag, tmp));
-				}
-				else if (mpz_cmp(mbar[tag], message[4]))
-				{
-					std::cerr << "RBC(" << j << "): received bad r-send" <<
-						" message from " << l << std::endl;
-					continue;
-				}
-				// prepare message $(ID.j.s, r-echo, H(m))$
-				RBC_ConstMessage message2;
-				message2.push_back(message[0]);
-				message2.push_back(message[1]);
-				message2.push_back(message[2]);
-				message2.push_back(r_echo);
-				tmcg_mpz_shash(message[4], 1, message[4]);
-				message2.push_back(message[4]);
-				// send to all parties by unicast transmission (very short timeout)
-				for (size_t i = 0; i < n; i++)
-				{
-					if (!aiou->Send(message2, i, aio_timeout_vs))
-					{
-						std::cerr << "RBC(" << j << "): sending r-echo" <<
-							" failed for " << i << std::endl;
-					}
-				}
-				message2.clear();
+				mpz_ptr tmp = new mpz_t();
+				mpz_init_set(tmp, message[4]); // $\bar{m} \gets m$
+				mbar.insert(std::pair<std::string, mpz_ptr>(tag, tmp));
 			}
+			else if (mpz_cmp(mbar[tag], message[4]))
+			{
+				std::cerr << "RBC(" << j << "): received bad r-send" <<
+					" message from " << l << std::endl;
+				continue;
+			}
+			// prepare message $(ID.j.s, r-echo, H(m))$
+			RBC_ConstMessage message2;
+			message2.push_back(message[0]);
+			message2.push_back(message[1]);
+			message2.push_back(message[2]);
+			message2.push_back(r_echo);
+			tmcg_mpz_shash(message[4], 1, message[4]);
+			message2.push_back(message[4]);
+			// send r-echo to all parties (very short timeout)
+			for (size_t i = 0; i < n; i++)
+			{
+				if (!aiou->Send(message2, i, aio_timeout_vs))
+				{
+					std::cerr << "RBC(" << j << "): sending r-echo" <<
+						" failed for " << i << std::endl;
+				}
+			}
+			message2.clear();
 			continue;
 		}
 		else if (!mpz_cmp(message[3], r_send) && send[l].count(tag))
@@ -635,7 +690,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				" more than once from " << l << std::endl;
 			continue;
 		}
-		// upon receiving message $(ID.j.s, r-echo, d)$ from $P_l$
+		// upon receiving message $(ID.j.s, r-echo, d)$ from $P_l$ for the first time
 		if (!mpz_cmp(message[3], r_echo) && !echo[l].count(tag))
 		{
 //std::cerr << "RBC: r-echo from " << l << " with d = " << message[4] << std::endl;
@@ -686,7 +741,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				message2.push_back(message[2]);
 				message2.push_back(r_ready);
 				message2.push_back(message[4]);
-				// send to all parties by unicast transmission (very short timeout)
+				// send r-ready to all parties (very short timeout)
 				for (size_t i = 0; i < n; i++)
 				{
 					if (!aiou->Send(message2, i, aio_timeout_vs))
@@ -705,7 +760,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				" more than once from " << l << std::endl;
 			continue;
 		}
-		// upon receiving message $(ID.j.s, r-ready, d)$ from $P_l$
+		// upon receiving message $(ID.j.s, r-ready, d)$ from $P_l$ for the first time
 		if (!mpz_cmp(message[3], r_ready) && !ready[l].count(tag))
 		{
 //std::cerr << "RBC(" << j << "): [" << tag << "] r-ready from " << l << " with d = " << message[4] << std::endl;
@@ -755,7 +810,7 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				message2.push_back(message[2]);
 				message2.push_back(r_ready);
 				message2.push_back(message[4]);
-				// send to all parties by unicast transmission (very short timeout)
+				// send r-ready to all parties (very short timeout)
 				for (size_t i = 0; i < n; i++)
 				{
 					if (!aiou->Send(message2, i, aio_timeout_vs))
@@ -798,8 +853,8 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 					message2.push_back(message[2]);
 					message2.push_back(r_request);
 					message2.push_back(message[4]);
-					// send to some parties by unicast transmission (very short timeout)
-					size_t howmany = ((2 * t) + 1); // TODO: optionally to all (more robust)
+					// send r-request to some parties (very short timeout)
+					size_t howmany = ((2 * t) + 1);
 					for (size_t i = 0; i < howmany; i++)
 					{
 						if (!aiou->Send(message2, i, aio_timeout_vs))
@@ -824,7 +879,8 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 					if (mbar.count(tag) == 0)
 						throw std::runtime_error("RBC::Deliver(): no mbar");
 					mpz_set(m, mbar[tag]); // set the result to $\bar{m}$
-					mpz_add_ui(deliver_s[who], deliver_s[who], 1L); // increase sequence counter
+					// increase sequence counter
+					mpz_add_ui(deliver_s[who], deliver_s[who], 1L);
 					i_out = who;
 					// release foo
 					mpz_clear(foo);
@@ -885,15 +941,15 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 				" more than once from " << l << std::endl;
 			continue;
 		}
-		// upon receiving message $(ID.j.s, r-answer, m) from $P_l$ for the first time
+		// upon receiving message $(ID.j.s, r-answer, m)$ from $P_l$ for the first time
 		if (!mpz_cmp(message[3], r_answer) && !answer[l].count(tag))
 		{
 //std::cerr << "RBC(" << j << "): [" << tag << "] r-answer from " << l << " with m = " << message[4] << std::endl;
 			answer[l].insert(std::pair<std::string, bool>(tag, true));
 			if (dbar.count(tag) == 0)
 			{
-				std::cerr << "RBC(" << j << "): not ready for r-answer" <<
-					" from " << l << std::endl;
+				std::cerr << "RBC(" << j << "): not ready for processing" <<
+					" r-answer from " << l << std::endl;
 				continue;
 			}
 			tmcg_mpz_shash(foo, 1, message[4]); // compute $H(m)$
@@ -924,8 +980,10 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 			{
 				if (mbar.count(tag) == 0)
 					throw std::runtime_error("RBC::Deliver(): no mbar found");
-				mpz_set(m, mbar[tag]); // set the result to $\bar{m}$
-				mpz_add_ui(deliver_s[who], deliver_s[who], 1L); // increase sequence counter
+				// get the playload from mbar cache
+				mpz_set(m, mbar[tag]);
+				// increase sequence counter
+				mpz_add_ui(deliver_s[who], deliver_s[who], 1L);
 				i_out = who;
 				// release foo
 				mpz_clear(foo);
@@ -935,8 +993,8 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 			}
 			if (!mpz_cmp(message[0], ID) && mpz_cmp(message[2], deliver_s[who]))
 			{
-				std::cerr << "RBC(" << j << "): sequence counter does not" <<
-					" match for " << who << " (" << message[2] <<
+				std::cerr << "RBC(" << j << "): WARNING - sequence counter" <<
+					" does not match for " << who << " (" << message[2] <<
 						" vs " << deliver_s[who] << ")" << std::endl;
 			}
 			// buffer the acknowledged message for later delivery
@@ -948,6 +1006,110 @@ bool CachinKursawePetzoldShoupRBC::Deliver
 		else if (!mpz_cmp(message[3], r_answer) && answer[l].count(tag))
 		{
 			std::cerr << "RBC(" << j << "): received r-answer for same tag" <<
+				" more than once from " << l << std::endl;
+			continue;
+		}
+		// upon receiving message $(ID.j.s, l-retrieve)$ from $P_l$
+		if (!mpz_cmp(message[3], l_retrieve))
+		{
+std::cerr << "RBC(" << j << "): [" << tag << "] l-retrieve from " << l << std::endl;
+			if (mbar.count(tag) > 0)
+			{
+				// prepare message $(ID.j.s, l-deliver, \bar{m})$
+				RBC_ConstMessage message2;
+				message2.push_back(message[0]);
+				message2.push_back(message[1]);
+				message2.push_back(message[2]);
+				message2.push_back(l_deliver);
+				message2.push_back(mbar[tag]);
+				// send r-deliver only to requesting party (very short timeout)
+				if (!aiou->Send(message2, l, aio_timeout_vs))
+				{
+					std::cerr << "RBC(" << j << "): sending l-deliver failed" <<
+						" for " << l << std::endl;
+				}
+				message2.clear();
+			}
+			continue;
+		}
+		// upon receiving message $(ID.j.s, l-deliver, m)$ from $P_l$ for the first time
+		if (!mpz_cmp(message[3], l_deliver) && !retrieve[l].count(tag))
+		{
+std::cerr << "RBC(" << j << "): [" << tag << "] l-deliver from " << l << std::endl;
+			retrieve[l].insert(std::pair<std::string, bool>(tag, true));
+			if (retrieve_buf.count(tag) == 0)
+			{
+				retrieve_buf[tag].resize(n);
+				for (size_t i = 0; i < n; i++)
+				{
+					mpz_ptr tmp = new mpz_t();
+					mpz_init_set_ui(tmp, 0UL);
+					(retrieve_buf[tag])[i] = tmp;
+				}
+			}
+			mpz_set((retrieve_buf[tag])[l], message[4]); // buffer content
+			size_t retrieve_num = 0;
+			for (size_t i = 0; i < n; i++)
+			{
+				if (retrieve[i].count(tag))
+					retrieve_num++;
+			}
+			if (retrieve_num < (n - t))
+				continue; // skip, if not enough messages retrieved
+			for (size_t i = 0; i < n; i++)
+			{
+				size_t agree_num = 1;
+				if (!retrieve[i].count(tag))
+					continue; // skip wrong parties
+				for (size_t k = i + 1; k < n; k++)
+				{
+					if (!retrieve[k].count(tag))
+						continue; // skip wrong parties
+					if (!mpz_cmp((retrieve_buf[tag])[i], (retrieve_buf[tag])[k]))
+						agree_num++;
+				}
+				if (agree_num >= (n - t))
+				{
+					size_t who = mpz_get_ui(message[1]);
+					if (who >= n)
+						throw std::runtime_error("RBC::Deliver(): who >= n");
+					// check for matching tag and sequence counter before delivering
+					if (!mpz_cmp(message[0], ID) &&
+						!mpz_cmp(message[2], deliver_s[who]))
+					{
+						if (mbar.count(tag) == 0)
+							throw std::runtime_error("RBC::Deliver(): no mbar");
+						// get the payload from agreed value
+						mpz_set(m, (retrieve_buf[tag])[i]);
+						// increase sequence counter
+						mpz_add_ui(deliver_s[who], deliver_s[who], 1L);
+						i_out = who;
+						// release foo
+						mpz_clear(foo);
+						// release message
+						ReleaseMessage(message);
+						return true;
+					}
+					if (!mpz_cmp(message[0], ID) &&
+						mpz_cmp(message[2], deliver_s[who]))
+					{
+						std::cerr << "RBC(" << j << "): WARNING - sequence" <<
+							" counter does not match for " << who << " (" <<
+							message[2] << " vs " << deliver_s[who] << ")" <<
+							std::endl;
+					}
+					// buffer the acknowledged message for later delivery
+					RBC_Message vtmp;
+					InitializeMessage(vtmp, message);
+					deliver_buf.push_back(vtmp);
+					break;
+				}
+			}
+			continue;
+		}
+		else if (!mpz_cmp(message[3], l_deliver) && retrieve[l].count(tag))
+		{
+			std::cerr << "RBC(" << j << "): received l-deliver for same tag" <<
 				" more than once from " << l << std::endl;
 			continue;
 		}
@@ -1204,6 +1366,8 @@ CachinKursawePetzoldShoupRBC::~CachinKursawePetzoldShoupRBC
 	mpz_clear(r_ready);
 	mpz_clear(r_request);
 	mpz_clear(r_answer);
+	mpz_clear(l_retrieve);
+	mpz_clear(l_deliver);
 	for (size_t i = 0; i < n; i++)
 	{
 		send[i].clear();
@@ -1211,8 +1375,20 @@ CachinKursawePetzoldShoupRBC::~CachinKursawePetzoldShoupRBC
 		ready[i].clear();
 		request[i].clear();
 		answer[i].clear();
+		retrieve[i].clear();
 	}
 	send.clear(), echo.clear(), ready.clear(), request.clear(), answer.clear();
+	retrieve.clear();
+	for (RBC_VectorMap::iterator mit = retrieve_buf.begin();
+		mit != retrieve_buf.end(); ++mit)
+	{
+		for (size_t i = 0; i < (mit->second).size(); i++)
+		{
+			mpz_clear((mit->second)[i]);
+			delete [] (mit->second)[i];
+		}
+	}
+	retrieve_buf.clear();
 	for (RBC_TagMpz::iterator mit = mbar.begin(); mit != mbar.end(); ++mit)
 	{
 		mpz_clear((*mit).second);
